<?xml version="1.0" encoding="utf-8"?><!-- $Id: pom.xml 336 2011-02-26 22:20:22Z ljnelson $ -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <prerequisites>
    <maven>3.0.3</maven>
  </prerequisites>

  <groupId>com.edugility</groupId>
  <artifactId>edugility-executorservice-ejb</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>ejb</packaging>

  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>

  <name>ExecutorService EJB</name>
  <description>ExecutorService EJB</description>
  <inceptionYear>2012</inceptionYear>
  <url>http://ljnelson.github.com/${project.artifactId}/</url>

  <organization>
    <name>Laird Nelson</name>
    <url>http://about.me/lairdnelson</url>
  </organization>

  <licenses>
    <license>
      <comments>The MIT License</comments>
      <distribution>repo</distribution>
      <name>MIT</name>
      <url>http://www.opensource.org/licenses/MIT</url>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git@github.com:ljnelson/${project.artifactId}.git</connection>
    <developerConnection>scm:git:git@github.com:ljnelson/${project.artifactId}.git</developerConnection>
    <url>https://github.com/ljnelson/${project.artifactId}/</url>
  </scm>

  <developers>
    <developer>
      <id>ljnelson</id>
      <name>Laird Nelson</name>
      <email>ljnelson@gmail.com</email>
      <url>http://about.me/lairdnelson</url>
      <roles>
        <role>architect</role>
        <role>developer</role>
      </roles>
      <timezone>-5</timezone>
    </developer>
  </developers>

  <issueManagement>
    <system>Github</system>
    <url>https://github.com/ljnelson/${project.artifactId}/issues</url>
  </issueManagement>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.edugility</groupId>
        <artifactId>edugility-callables-jndi</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junitVersion}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.glassfish.main.ejb</groupId>
        <artifactId>javax.ejb</artifactId>
        <scope>provided</scope>
        <version>${javaxEjbVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.main.extras</groupId>
        <artifactId>glassfish-embedded-all</artifactId>
        <version>${javaxEjbVersion}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.edugility</groupId>
      <artifactId>edugility-callables-jndi</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.glassfish.main.ejb</groupId>
      <artifactId>javax.ejb</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.glassfish.main.extras</groupId>
      <artifactId>glassfish-embedded-all</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>

        <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>${mavenAssemblyPluginVersion}</version>
        </plugin>

        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${mavenCompilerPluginVersion}</version>
          <configuration>
            <compilerArgument>-Xlint:all</compilerArgument>
          </configuration>
        </plugin>

        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>${mavenCleanPluginVersion}</version>
          <configuration>
            <filesets>
              <fileset>
                <directory>${basedir}</directory>
                <includes>
                  <include>*~</include>
                  <include>src/**/*~</include>
                </includes>
              </fileset>
            </filesets>
          </configuration>
        </plugin>

        <plugin>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>${mavenDependencyPluginVersion}</version>
        </plugin>

        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>${mavenDeployPluginVersion}</version>
        </plugin>

        <plugin>
          <artifactId>maven-ejb-plugin</artifactId>
          <version>${mavenEjbPluginVersion}</version>
        </plugin>

        <plugin>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>${mavenEnforcerPluginVersion}</version>
        </plugin>

        <plugin>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>${mavenGpgPluginVersion}</version>
        </plugin>

        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>${mavenInstallPluginVersion}</version>
        </plugin>

        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${mavenJarPluginVersion}</version>
        </plugin>

        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>${mavenJavadocPluginVersion}</version>
        </plugin>

        <plugin>
          <artifactId>maven-plugin-plugin</artifactId>
          <version>${mavenPluginPluginVersion}</version>
        </plugin>

        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>${mavenProjectInfoReportsPlugin}</version>
        </plugin>

        <plugin>
          <artifactId>maven-release-plugin</artifactId>
          <version>${mavenReleasePluginVersion}</version>
        </plugin>

        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${mavenResourcesPluginVersion}</version>
          <configuration>
            <delimiters>
              <delimiter>${*}</delimiter>
            </delimiters>
            <useDefaultDelimiters>false</useDefaultDelimiters>
          </configuration>
        </plugin>

        <plugin>
          <artifactId>maven-scm-plugin</artifactId>
          <version>${mavenScmPluginVersion}</version>
        </plugin>

        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>${mavenSitePluginVersion}</version>
        </plugin>

        <plugin>
          <artifactId>maven-source-plugin</artifactId>
          <version>${mavenSourcePluginVersion}</version>
        </plugin>

        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${mavenSurefirePluginVersion}</version>
          <configuration>
            <argLine>-Djava.endorsed.dirs="${settings.localRepository}${file.separator}org${file.separator}glassfish${file.separator}main${file.separator}javaee-api${file.separator}javax.annotation${file.separator}${javaxAnnotationVersion}"</argLine>
            <systemPropertyVariables>
              <java.util.logging.config.file>${loggingConfigFile}</java.util.logging.config.file>
              <maven.project.build.directory>${project.build.directory}</maven.project.build.directory>
            </systemPropertyVariables>
          </configuration>
          <dependencies>
            <dependency>
              <groupId>org.glassfish.main.javaee-api</groupId>
              <artifactId>javax.annotation</artifactId>
              <version>${javaxAnnotationVersion}</version>
            </dependency>
          </dependencies>
        </plugin>

        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>${versionsMavenPluginVersion}</version>
        </plugin>

      </plugins>
    </pluginManagement>

    <resources>
      <resource>
        <directory>${basedir}/src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>
    </plugins>
    <testResources>
      <testResource>
        <directory>${basedir}/src/test/resources</directory>
        <filtering>true</filtering>
      </testResource>
    </testResources>

  </build>

  <properties>

    <!-- Versions -->
    <javaNCSSMavenPluginVersion>2.0</javaNCSSMavenPluginVersion>
    <javaxAnnotationVersion>3.1.2</javaxAnnotationVersion>
    <javaxEjbVersion>3.1.2</javaxEjbVersion>
    <junitVersion>4.10</junitVersion>
    <mavenAssemblyPluginVersion>2.3</mavenAssemblyPluginVersion>
    <mavenCleanPluginVersion>2.4.1</mavenCleanPluginVersion>
    <mavenCompilerPluginVersion>2.5.1</mavenCompilerPluginVersion>
    <mavenDependencyPluginVersion>2.5</mavenDependencyPluginVersion>
    <mavenDeployPluginVersion>2.7</mavenDeployPluginVersion>
    <mavenEjbPluginVersion>2.3</mavenEjbPluginVersion>
    <mavenEnforcerPluginVersion>1.1.1</mavenEnforcerPluginVersion>
    <mavenGpgPluginVersion>1.4</mavenGpgPluginVersion>
    <mavenInstallPluginVersion>2.3.1</mavenInstallPluginVersion>
    <mavenJarPluginVersion>2.4</mavenJarPluginVersion>
    <mavenJavadocPluginVersion>2.8.1</mavenJavadocPluginVersion>
    <mavenPluginPluginVersion>3.1</mavenPluginPluginVersion>
    <mavenProjectInfoReportsPlugin>2.4</mavenProjectInfoReportsPlugin>
    <mavenReleasePluginVersion>2.2.2</mavenReleasePluginVersion>
    <mavenResourcesPluginVersion>2.5</mavenResourcesPluginVersion>
    <mavenScmManagerPlexusVersion>${mavenScmPluginVersion}</mavenScmManagerPlexusVersion>
    <mavenScmPluginVersion>1.6</mavenScmPluginVersion>
    <mavenScmProviderGitexeVersion>${mavenScmPluginVersion}</mavenScmProviderGitexeVersion>
    <mavenSitePluginVersion>3.0</mavenSitePluginVersion>
    <mavenSourcePluginVersion>2.1.2</mavenSourcePluginVersion>
    <mavenSurefirePluginVersion>2.12.2</mavenSurefirePluginVersion>
    <mvelVersion>2.0.19</mvelVersion>
    <versionsMavenPluginVersion>1.3.1</versionsMavenPluginVersion>

    <!-- Other Properties -->
    <loggingConfigFile>${basedir}/logging.properties</loggingConfigFile>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <projectVersion>${project.version}</projectVersion>

    <!-- maven-compiler-plugin Properties -->
    <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
    <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
    <maven.compiler.source>1.6</maven.compiler.source>
    <maven.compiler.target>1.6</maven.compiler.target>
    <maven.compiler.verbose>true</maven.compiler.verbose>

    <!-- maven-ejb-plugin Properties -->
    <ejb.ejbVersion>3.1</ejb.ejbVersion>

    <!-- maven-resources-plugin Properties -->
    <maven.resources.escapeString>\</maven.resources.escapeString>

    <!-- maven-site-plugin Properties -->
    <maven.site.deploy.skip>false</maven.site.deploy.skip>

    <!-- maven-javadoc-plugin Properties -->
    <detectLinks>false</detectLinks>
    <links>http://download.oracle.com/javaee/6/api/</links>
    <sourcetab>2</sourcetab>
    <stylesheet>maven</stylesheet>

    <!-- maven-surefire-plugin Properties -->
    <surefire.useFile>false</surefire.useFile>

  </properties>

  <reporting>
    <plugins>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${mavenJavadocPluginVersion}</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>javancss-maven-plugin</artifactId>
        <version>${javaNCSSMavenPluginVersion}</version>
      </plugin>
    </plugins>
  </reporting>

</project>
